<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.SettingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:gravity="center|center_horizontal"
                android:src="@drawable/catdog"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginTop="35dp"/>
            <TextView
                android:textSize="20sp"
                android:layout_marginTop="12dp"
                android:text="@string/my_user"
                android:id="@+id/mTvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/Account_information"
            android:layout_gravity="center_horizontal"
            android:id="@+id/user"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <!--android:drawableLeft="@drawable/zhanghu"-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/security_setting"
            android:layout_gravity="center_horizontal"
            android:id="@+id/safe"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <!--android:drawableLeft="@drawable/anquan"-->

        <!--<Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/Authority_management"
            android:gravity="left|center"
            android:drawableLeft="@drawable/quanxian"
            android:id="@+id/permission"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/offline_map"
            android:layout_gravity="center_horizontal"
            android:id="@+id/map"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <!--android:drawableLeft="@drawable/ditu"-->

        <!--<Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/Memory_cleanup"
            android:gravity="left|center"
            android:drawableLeft="@drawable/qingli"
            android:id="@+id/memory"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/Bluetooth_Settings"
            android:gravity="left|center"
            android:drawableLeft="@drawable/lanya"
            android:id="@+id/bluetooth"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/Short_message_sequence"
            android:gravity="left|center"
            android:drawableLeft="@drawable/message"
            android:id="@+id/message"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/red"
            android:text="@string/Log_out"
            android:id="@+id/exit"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>
</ScrollView>