<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:divider="@color/black"
    app:dividerPadding="3dp"
    app:showDividers="beginning|middle|end"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/register"
        android:scaleType="centerCrop"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="17"
        android:layout_gravity="start"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:layout_gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/Register_ID"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="4dp"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:layout_gravity="end"
                android:gravity="center"
                android:hint="请输入手机号"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="17"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:layout_gravity="start">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/Register_Check"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="4dp"
                    android:gravity="center"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center"
                    android:hint="请输入验证码"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/Check_get"
                    android:id="@+id/btn_getCheck"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="17"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:layout_gravity="start">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:text="@string/Register_Pass"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="4dp"
                        android:gravity="center"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:hint="请输入密码"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="12dp"
        android:text="@string/register"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

