<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragment.RelationFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_relation"
            android:background="#0D000000"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:layout_width="60px"
                android:layout_height="wrap_content"
                android:src="@drawable/more_icon"
                android:layout_marginRight="60px"
                android:layout_gravity="right"
                android:id="@+id/iv_more_relation" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_marginLeft="60px"
            android:layout_marginRight="60px"
            android:layout_marginTop="30px"
            android:gravity="center_vertical"
            android:background="@drawable/et_background"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/search_et_input_relation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:imeOptions="actionSearch"
                android:drawablePadding="8dp"
                android:background="@null"
                android:singleLine="true" />
            <View
                android:layout_width="1px"
                android:layout_height="60px"
                android:background="@color/black" />

            <ImageView
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|center_horizontal"
                android:layout_margin="10dp"
                android:layout_marginRight="60px"
                android:layout_marginLeft="60px"
                android:padding="5dp"
                android:src="@drawable/search_icon" />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/friends"/>

        <ListView
            android:id="@+id/friendList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:textColor="@color/black"
            android:text="@string/Group_chat"/>

        <ListView
            android:id="@+id/groupList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/organization"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="3"
            android:id="@+id/rvData"/>

    </LinearLayout>

</ScrollView>
